arm64:boot:dts:F+S:fs-osm-sf-mx93-adp-osm-bb: add sd HS and UHS support
in addition:
wrong IO Muxing in pinctrl_gpio2 is fixed.

--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb.dts
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93-adp-osm-bb.dts
@@ -8,19 +8,19 @@
 
 
 /* When Undefined, IO of UARTC and UARTD will be configured as GPIO */
-// #define CONFIG_OSMSFMX93_UARTC
-// #define CONFIG_OSMSFMX93_UARTD
+#define CONFIG_OSMSFMX93_UARTC
+#define CONFIG_OSMSFMX93_UARTD
 
 #include "fs-osm-sf-mx93.dtsi"
 
 &osm_eth_a {
-    phy-mode = "rgmii-id";
-    phy-handle = <&ethphy1>;
-    status = "okay";
-    mdio {
-        status = "okay";
-        
-        /* Note: Broadcast address*/
+	phy-mode = "rgmii-id";
+	phy-handle = <&ethphy1>;
+	status = "okay";
+	mdio {
+		status = "okay";
+
+		/* Note: Broadcast address*/
 		ethphy1: rtl8211fdi@0 {
 			reg = <0>;
 		};
@@ -28,54 +28,65 @@
 };
 
 &osm_uart_b {
-    status = "okay";
+	status = "okay";
 };
 
 #if defined(CONFIG_OSMSFMX93_UARTC)
 &osm_uart_c {
-    status = "okay";
+	status = "okay";
 };
 #endif
 
 #if defined(CONFIG_OSMSFMX93_UARTD)
 &osm_uart_d {
-    status = "okay";
+	status = "okay";
 };
 #endif
 
 &osm_can_a {
-    status = "okay";
+	status = "okay";
+};
+
+&osm_can_b {
+	status = "okay";
 };
 
 &osm_usb_a {
-    dr_mode = "otg";
-    hnp-disable;
+	dr_mode = "otg";
+	hnp-disable;
 	srp-disable;
 	adp-disable;
-    status = "okay";
+	status = "okay";
 };
 
 &osm_usb_b {
-    dr_mode = "host";
-    status = "okay";
+	dr_mode = "host";
+	status = "okay";
 };
 
 &osm_i2c_a {
-    status = "okay";
+	status = "okay";
 };
 
 &osm_i2c_b {
-    status = "okay";
+	status = "okay";
 };
 
 &osm_i2c_cam {
-    status = "okay";
+	status = "okay";
 };
 
 &osm_i2s_a {
-    status = "okay";
+	status = "okay";
 };
 
 &osm_sdio_a {
-    status = "okay";
+	cd-inverted;
+	cap-sd-highspeed;
+	sd-uhs-sdr12;
+	sd-uhs-sdr25;
+	sd-uhs-sdr50;
+	sd-uhs-sdr104;
+	sd-uhs-ddr50;
+	status = "okay";
 };
