dts:F+S: add fs-osm-sf-mx93-fert2x dtsi
The fs-osm-sf-mx93-fert2x devicetree provides alternative pinmuxing and
device configuration for other OSM-MX93 variants.

This dtsi file must be included after fs-osm-sf-mx93.dtsi.

NOTE:
fs-osm-sf-mx93-fert2x is not pin-compatible with the OSM specification!

The .dtb file has no further configuration. It ensures the correct
references in fs-osm-sf-mx93-fert2x.dtsi after changes in other include
files.

--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -14,3 +14,4 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx93.dtb \
 
 dtb-$(CONFIG_ARCH_MXC) += fs-osm-sf-mx93-adp-osm-bb.dtb \
 						fs-osm-sf-mx93-adp-osm-bb_BT070L1060CS0I1AD-A.dtb \
+						fs-osm-sf-mx93-fert2x.dtb
