--- a/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
+++ b/arch/arm64/boot/dts/F+S/fs-osm-sf-mx93.dtsi
@@ -517,7 +517,6 @@ i2c_int: &lpi2c2 {
 		clock-out = <PCF85263_CLK_OUT_32p768kHz>;
 		quartz-load-capacitance = <PCF85263_QUARTZCAP_12p5pF>;
 		quartz-drive-strength = <PCF85263_QUARTZDRIVE_LOW>;
-
 	};
 };
 
@@ -599,6 +598,7 @@ osm_can_b: &flexcan2 {
 osm_i2s_a: &sai3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_sai3>;
+	status = "disabled";
 };
 
 /* SDIO decleration */
@@ -624,6 +624,7 @@ osm_sdio_a: &usdhc2 {
 	vmmc-supply = <&reg_sdio_a_pwr>;
 	bus-width = <4>;
 	wp-gpios = <&gpio2 25 GPIO_ACTIVE_HIGH>;
+	status = "disabled";
 };
 
 
