arm64:configs: build marvel phy driver
build marvel phy drives as module.

Drivers that are not required for onboard phys of the board are not
built internally.

--- a/arch/arm64/configs/fsgal_defconfig
+++ b/arch/arm64/configs/fsgal_defconfig
@@ -323,10 +323,11 @@ CONFIG_SMC91X=y
 CONFIG_SMSC911X=y
 # CONFIG_NET_VENDOR_STMICRO is not set
 CONFIG_SFP=y
-CONFIG_BROADCOM_PHY=y
+CONFIG_BROADCOM_PHY=m
+CONFIG_MARVELL_PHY=m
 CONFIG_MICROSEMI_PHY=y
 CONFIG_REALTEK_PHY=y
-CONFIG_ROCKCHIP_PHY=y
+CONFIG_ROCKCHIP_PHY=m
 CONFIG_CAN_FLEXCAN=m
 CONFIG_CAN_MCP251XFD=m
 CONFIG_MDIO_BITBANG=y
