--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -82,13 +82,12 @@
 			#address-cells = <2>;
 			#size-cells = <2>;
 			ranges;
-/* Running the m-core from the ddr is not supportet yet */
-#if 0
+
 			m4_reserved: m4@0x80000000 {
 				no-map;
 				reg = <0 0x80000000 0 0x1000000>;
 			};
-#endif
+
 			vdev0vring0: vdev0vring0@55000000 {
 				reg = <0 0x55000000 0 0x8000>;
 				no-map;
@@ -125,7 +124,7 @@
 		mboxes = <&mu 0 1
 			  &mu 1 1
 			  &mu 3 1>;
-		memory-region = <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>, <&rsc_table>;
+		memory-region = <&m4_reserved>, <&vdevbuffer>, <&vdev0vring0>, <&vdev0vring1>, <&rsc_table>;
 		status = "okay";
 		fsl,startup-delay-ms = <500>;
 	};
