Add M7 Conditions to other fsimx8mp Boards
Until now the only fsimx8mp Board that dupports the M7 running next to
Linux is PicoCoreMX8MP. Add the changes to armStoneMX8MP, efusMX8MP and
fssmmx8mp.

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
@@ -10,6 +10,7 @@
 
 /* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
 #define CONFIG_ARMSTONEMX8MP_BOARD_REVISION	100
+//#define SUPPORT_M7
 
 #define DISPLAY_NONE	0	/* No display on this port */
 #define DISPLAY_HDMI	1	/* DVI/HDMI via HDMI connector */
@@ -239,6 +240,14 @@
 #define CONFIG_ARMSTONEMX8MP_SECURE
 /* Keypad matrix on feature connector - J20 */
 #define CONFIG_ARMSTONEMX8MP_KEYPAD_MATRIX
+
+#ifdef SUPPORT_M7
+#undef CONFIG_ARMSTONEMX8MP_UART_C
+#undef CONFIG_ARMSTONEMX8MP_PWM_A
+#undef CONFIG_ARMSTONEMX8MP_CAN_A
+#undef CONFIG_ARMSTONEMX8MP_I2C_C
+#undef CONFIG_ARMSTONEMX8MP_SPI_B
+#endif
 
 #include "../freescale/imx8mp.dtsi"
 #include "armstonemx8mp.dtsi"
