Fix fsimx8mp DSP dram reservation
The DSP reserved memory is hard defined in the imx8mp.dtsi at > 1GB
DRAM.
This causes memory corruption on boards <= 1GB DRAM if the DSP is
enabled.
Also, if the DSP is disabled, the memory still gets reserved, so there
is less memory available for CMA.

We move the DSP reserved memory to the beginning of the DRAM, right
before the reserved memory for the Cortex-M processors. Also we disable
the DSP by default, because most customers don't use it.

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dts
@@ -240,6 +240,8 @@
 #define CONFIG_ARMSTONEMX8MP_SECURE
 /* Keypad matrix on feature connector - J20 */
 #define CONFIG_ARMSTONEMX8MP_KEYPAD_MATRIX
+/* HIFI4 DSP */
+//#define CONFIG_ARMSTONEMX8MP_DSP
 
 #ifdef SUPPORT_M7
 #undef CONFIG_ARMSTONEMX8MP_UART_C
