--- a/arch/arm64/boot/dts/F+S/efusmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp.dts
@@ -323,6 +323,8 @@
 #define CONFIG_EFUSMX8MP_EEPROM
 /* PCIE */
 #define CONFIG_EFUSMX8MP_PCIE
+/* HIFI4 DSP */
+//#define CONFIG_EFUSMX8MP_DSP
 
 #ifdef SUPPORT_M7
 #undef CONFIG_EFUSMX8MP_I2C_B
