--- a/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
+++ b/arch/arm64/boot/dts/F+S/fssmmx8mp.dts
@@ -91,6 +91,8 @@
 /* Security chip */
 #define CONFIG_FSSMMX8MP_SECURE
 #define CONFIG_FSSMMX8MP_EEPROM
+/* HIFI4 DSP */
+//#define CONFIG_FSSMMX8MP_DSP
 
 #ifdef SUPPORT_M7
 #undef CONFIG_FSSMMX8MP_I2C_PM
