--- a/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mp.dtsi
@@ -114,6 +114,37 @@
 		 * only by tuning tool
 		 * */
 		/delete-node/isp0@94400000;
+		/* remove these nodes because we reserve
+		 * our own memory regions
+		 * */
+		/delete-node/dsp@92400000;
+		/delete-node/dsp_reserved_heap;
+		/delete-node/vdev0vring0@942f0000;
+		/delete-node/vdev0vring1@942f8000;
+		/delete-node/vdev0buffer@94300000;
+#ifdef CONFIG_PICOCOREMX8MP_DSP
+		dsp_reserved: dsp@53000000 {
+			reg = <0 0x53000000 0 0x1000000>;
+			no-map;
+		};
+		dsp_reserved_heap: dsp_reserved_heap {
+			reg = <0 0x54000000 0 0xef0000>;
+			no-map;
+		};
+		dsp_vdev0vring0: vdev0vring0@54ef0000 {
+			reg = <0 0x54ef0000 0 0x8000>;
+			no-map;
+		};
+		dsp_vdev0vring1: vdev0vring1@54ef8000 {
+			reg = <0 0x54ef8000 0 0x8000>;
+			no-map;
+		};
+		dsp_vdev0buffer: vdev0buffer@54f00000{
+			compatible = "shared-dma-pool";
+			reg = <0 0x54f00000 0 0x100000>;
+			no-map;
+		};
+#endif
 	};
 #ifdef SUPPORT_M7
 	imx8mp-cm7 {
@@ -1124,7 +1155,14 @@
 };
 
 &dsp {
+#ifdef CONFIG_PICOCOREMX8MP_DSP
+	memory-region = <&dsp_vdev0buffer>, <&dsp_vdev0vring0>,
+			<&dsp_vdev0vring1>, <&dsp_reserved>;
 	status = "okay";
+#else
+	/delete-property/ memory-region;
+	status = "disabled";
+#endif
 };
 
 &snvs_pwrkey {
