--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dtsi
@@ -548,7 +548,7 @@
 	#size-cells = <0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1>;
-	fsl,spi-num-chipselects = <1>;
+	num-cs = <1>;
 	cs-gpios = <&gpio5 9 GPIO_ACTIVE_LOW>;
 	status = "okay";
 
@@ -601,7 +601,7 @@
 &ecspi2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2>;
-	fsl,spi-num-chipselects = <1>;
+	num-cs = <1>;
 	cs-gpios = <&gpio5 13 0>;
 	status = "okay";
 
