--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -661,7 +661,7 @@
 #ifdef CONFIG_ARMSTONEA9_SPI_A
 /* SPI_A (2x CS) */
 &ecspi2 {
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	cs-gpios = <&gpio2 26 GPIO_ACTIVE_HIGH>; /* SPI_A_CS1 */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2_1 &pinctrl_ecspi2_cs>;
