--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -526,7 +526,7 @@
 #ifdef CONFIG_ARMSTONEA9R2_SPI_FLASH
 /* Optional on-board SPI flash (1x CS) */
 &ecspi1 {
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	cs-gpios = <&gpio2 30 GPIO_ACTIVE_HIGH>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1_1 &pinctrl_ecspi1_cs>;
@@ -545,7 +545,7 @@
 #ifdef CONFIG_ARMSTONEA9R2_SPI_A
 /* SPI_A (1x CS) */
 &ecspi2 {
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	cs-gpios = <&gpio2 26 GPIO_ACTIVE_HIGH>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2_1 &pinctrl_ecspi2_cs>;
@@ -564,7 +564,7 @@
 #ifdef CONFIG_ARMSTONEA9R2_SPI_B
 /* SPI_B (1x CS) */
 &ecspi3 {
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	cs-gpios = <&gpio4 24 GPIO_ACTIVE_HIGH>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3_1 &pinctrl_ecspi3_cs>;
