--- a/arch/arm/boot/dts/cont1.dts
+++ b/arch/arm/boot/dts/cont1.dts
@@ -216,7 +216,7 @@
 &ecspi1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1>;
-	fsl,spi-num-chipselects = <4>;
+	num-cs = <4>;
 	cs-gpios = <&gpio2 16 0>, <&gpio2 18 0>, <&gpio2 13 0>, <&gpio2 17 0>;
 	status = "okay";
 
@@ -258,7 +258,7 @@
 &ecspi2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2>;
-	fsl,spi-num-chipselects = <4>;
+	num-cs = <4>;
 	cs-gpios = <&gpio6 14 0>, <&gpio7 2 0>, <&gpio7 3 0>, <&gpio6 16 0>;
 	status = "okay";
 
@@ -299,7 +299,7 @@
 #ifdef CONFIG_CONT1_SPI_C
 &ecspi4 {
 	/* SPI_A: 5x CS */
-	fsl,spi-num-chipselects = <5>;
+	num-cs = <5>;
 	cs-gpios = <&gpio7 4 0>, <&gpio3 1 0>, <&gpio3 2 0>,
 		   <&gpio3 3 0>, <&gpio3 4 0>;
 	pinctrl-names = "default";
@@ -353,7 +353,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi5>;
 	/* SPI_A: 4x CS */
-	fsl,spi-num-chipselects = <4>;
+	num-cs = <4>;
 	cs-gpios = <&gpio4 28 0>, <&gpio4 18 0>, <&gpio4 19 0>, <&gpio4 27 0>;
 	status = "okay";
 
