--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -674,7 +674,7 @@
 #ifdef CONFIG_EFUSA9_SPI_B
 /* SPI_B (3x CS) */
 &ecspi1 {
-	fsl,spi-num-chipselects = <3>;
+	num-cs = <3>;
 	cs-gpios = <&gpio2 30 0>,	/* optional on-board SPI flash */
 		<&gpio3 24 0>,		/* SPI_B_CS1 */
 		<&gpio3 25 0>;		/* SPI_B_CS2 */
@@ -711,7 +711,7 @@
 #ifdef CONFIG_EFUSA9_SPI_A
 /* SPI_A (2x CS) */
 &ecspi2 {
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	cs-gpios = <&gpio2 26 0>,	/* SPI_A_CS1 */
 		<&gpio2 27 0>;		/* SPI_A_CS2 */
 
