--- a/arch/arm/boot/dts/qblissa9qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9qdl.dtsi
@@ -491,7 +491,7 @@
 
 #ifdef CONFIG_QBLISSA9_SPI_FLASH
 &ecspi1 {
-	fsl,spi-num-chipselects = <1>;
+	num-cs = <1>;
 	cs-gpios = <&gpio2 30 GPIO_ACTIVE_HIGH>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1_1 &pinctrl_ecspi1_cs>;
@@ -510,7 +510,7 @@
 #ifdef CONFIG_QBLISSA9_SPI_A
 /* SPI_A (2x CS) */
 &ecspi2 {
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	cs-gpios = <&gpio2 26 0>,
 		<&gpio2 27 0>;
 	pinctrl-names = "default";
