--- a/arch/arm64/boot/dts/F+S/efusmx8x.dts
+++ b/arch/arm64/boot/dts/F+S/efusmx8x.dts
@@ -650,7 +650,7 @@
 &lpspi0 {
 	#address-cells = <1>;
 	#size-cells = <0>;
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpspi0>;
 /*** KM-2019-11-15: Set clock-rate from 20MHz to 60MHz to ensure maximum SPI clk rates of 30MHz ***/
@@ -683,7 +683,7 @@
 &lpspi3 {
 	#address-cells = <1>;
 	#size-cells = <0>;
-	fsl,spi-num-chipselects = <2>;
+	num-cs = <2>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lpspi3>;
 	assigned-clock-rates = <61000000>;
