--- a/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mn-lpddr4.dts
@@ -703,7 +703,7 @@
 	#size-cells = <0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi1>;
-	fsl,spi-num-chipselects = <1>;
+	num-cs = <1>;
 	cs-gpios = <&gpio5 9 GPIO_ACTIVE_LOW>;
 	status = "okay";
 
@@ -756,7 +756,7 @@
 &ecspi2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi2>;
-	fsl,spi-num-chipselects = <1>;
+	num-cs = <1>;
 	cs-gpios = <&gpio5 13 0>;
 	status = "okay";
 
