Fix imx uart dma watermark level
It was not possible to read data from serial port when input buffer
contains exactly 9 bytes.
The number 9 is related to the length of the rx_fifo_trig in
drivers/tty/serial/imx.c. The src_maxburst has to be one byte smaller
than the watermark level to trigger the aging timer.

This fix is available since kernel 4.4 but did not get merged properly

We restrict the "fsl,rx_fifo_trig" to a minimum of Bytes, so the
src_maxburst can still be one byte smaller. If it has to be smaller
"no-dma" has to be used.

--- a/Documentation/devicetree/bindings/serial/fsl-imx-uart.yaml
+++ b/Documentation/devicetree/bindings/serial/fsl-imx-uart.yaml
@@ -94,7 +94,7 @@ properties:
     $ref: /schemas/types.yaml#/definitions/flag
     description: |
       Level when the receice FIFO triggers the interrupt
-      or DMA request (default 16, or 1 on console). Maximum
+      or DMA request (default 9). Minimum value is 2 and maximum
       value is 32.
   no-dma:
     $ref: /schemas/types.yaml#/definitions/flag
