arch:arm64:config: Improve fsimx8mp_defconfig
Add CONFIG_DM_VERITY required by RAUC and CONFIG_SQUASHFS_XATTR
to use squashfs.

--- a/arch/arm64/configs/fsimx8mp_defconfig
+++ b/arch/arm64/configs/fsimx8mp_defconfig
@@ -237,6 +237,7 @@ CONFIG_BLK_DEV_DM=m
 CONFIG_DM_CRYPT=m
 CONFIG_DM_MIRROR=m
 CONFIG_DM_ZERO=m
+CONFIG_DM_VERITY=m
 CONFIG_NETDEVICES=y
 CONFIG_MACVLAN=m
 CONFIG_MACVTAP=m
@@ -748,6 +749,7 @@ CONFIG_UBIFS_FS_ADVANCED_COMPR=y
 CONFIG_SQUASHFS=y
 CONFIG_SQUASHFS_FILE_DIRECT=y
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_SQUASHFS_XATTR=y
 CONFIG_SQUASHFS_LZ4=y
 CONFIG_SQUASHFS_LZO=y
 CONFIG_SQUASHFS_XZ=y
