--- a/arch/arm64/boot/dts/F+S/displays/imx8mp-BT070L1060CS0I1AD-A.dtsi
+++ b/arch/arm64/boot/dts/F+S/displays/imx8mp-BT070L1060CS0I1AD-A.dtsi
@@ -12,9 +12,9 @@
                 compatible = "panel-lvds";
                 backlight = <&backlight_ldb>;
                 /* MIPI_RST from board */
-                //reset-gpios = <&IMX8MP_MIPI_RESET_GPIO_BANK IMX8MP_MIPI_RESET_GPIO_NUM GPIO_ACTIVE_LOW>;
+                //enable-gpios = <&IMX8MP_MIPI_RESET_GPIO_BANK IMX8MP_MIPI_RESET_GPIO_NUM GPIO_ACTIVE_HIGH>;
                 /* Mounting option for MIPI_RST on pca9634 (ADP-LVDS2LVDS2) */
-                reset-gpios = <&pca963x 3 GPIO_ACTIVE_HIGH>;
+                enable-gpios = <&pca963x 3 GPIO_ACTIVE_HIGH>;
                 data-mapping = "vesa-24";
                 label = "BT070L1060CS0I1AD-A";
                 width-mm = <155>;
@@ -121,7 +121,7 @@
                                 reg = <3>;
                                 label = "MIPI_RST";
                                 type = "GPIO";
-                                active-low;
+                                active-high;
                                 default-on;             /* or: keep-value */
                         };
                         led@4 {
