--- a/arch/arm64/boot/dts/F+S/efusmx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/efusmx8mp.dtsi
@@ -370,7 +370,7 @@
 		width-mm = <CONFIG_EFUSMX8MP_LVDS0_PANEL_WIDTH>;
 		height-mm = <CONFIG_EFUSMX8MP_LVDS0_PANEL_HEIGHT>;
 #ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
-		reset-gpios = <&pca9634 3 GPIO_ACTIVE_LOW>;
+		enable-gpios = <&pca9634 3 GPIO_ACTIVE_HIGH>;
 #endif
 		status = "okay";
 
@@ -396,7 +396,7 @@
 		width-mm = <CONFIG_EFUSMX8MP_LVDS1_PANEL_WIDTH>;
 		height-mm = <CONFIG_EFUSMX8MP_LVDS1_PANEL_HEIGHT>;
 #ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
-		reset-gpios = <&pca9634 3 GPIO_ACTIVE_LOW>;
+		enable-gpios = <&pca9634 3 GPIO_ACTIVE_HIGH>;
 #endif
 		status = "okay";
 
@@ -773,8 +773,7 @@ pca9634: pca9634@61 {
 				reg = <3>;
 				label = "MIPI_RST";
 				type = "GPIO";
-				active-low;
-				default-on;             /* or: keep-value */
+				active-high;
 		};
 		led@4 {
 				reg = <4>;
