--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -320,7 +320,9 @@
 		width-mm = <CONFIG_ARMSTONEMX8MP_LVDS0_PANEL_WIDTH>;
 		height-mm = <CONFIG_ARMSTONEMX8MP_LVDS0_PANEL_HEIGHT>;
 		status = "okay";
-
+#if defined(DISPLAY_LVDS_BT070L1060CS0I1ADA) || defined(DISPLAY_LVDS_EE1010B1T1CP)
+		enable-gpios = <&pca963x 3 GPIO_ACTIVE_HIGH>;
+#endif
 		panel-timing {
 			CONFIG_ARMSTONEMX8MP_LVDS0_PANEL_TIMING
 		};
@@ -342,7 +344,7 @@
 		label = CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_LABEL;
 		width-mm = <CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_WIDTH>;
 		height-mm = <CONFIG_ARMSTONEMX8MP_LVDS1_PANEL_HEIGHT>;
-#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+#if defined(DISPLAY_LVDS_BT070L1060CS0I1ADA) || defined(DISPLAY_LVDS_EE1010B1T1CP)
 		enable-gpios = <&pca963x 3 GPIO_ACTIVE_HIGH>;
 #endif
 		status = "okay";
@@ -748,6 +750,18 @@ touch: ilitek2130@41 {
         reset-gpios = <&pca963x 5 GPIO_ACTIVE_LOW>;
         };
 #endif
+#ifdef CONFIG_ARMSTONEMX8MP_CAPTOUCH_GOODIX
+touch: goodix@5d {
+        compatible = "goodix,gt928";
+        reg = <0x5d>;
+        interrupt-parent = <&gpio1>;
+        interrupts = <7 IRQ_TYPE_EDGE_RISING>;
+        reset-gpios = <&pca963x 5 GPIO_ACTIVE_HIGH>;
+        irq-gpios = <&gpio1 7 GPIO_ACTIVE_HIGH>;
+        touchscreen-inverted-x;
+        touchscreen-inverted-y;
+        };
+#endif
 #ifdef CONFIG_ARMSTONEMX8MP_CAPTOUCH_FT5x26
 	/* touch I2C */
 	focaltech@38 {
@@ -767,7 +781,7 @@ touch: ilitek2130@41 {
 		focaltech,display-coords = <0 0 800 480>;
 	};
 #endif
-#ifdef DISPLAY_LVDS_BT070L1060CS0I1ADA
+#if defined(DISPLAY_LVDS_BT070L1060CS0I1ADA) || defined(DISPLAY_LVDS_EE1010B1T1CP)
 	pca963x: pca9634@61 {
     	compatible = "nxp,pca9634";
         reg = <0x61>;
@@ -829,7 +843,7 @@ touch: ilitek2130@41 {
 				default-on;
 		};
     };
-#endif	/* DISPLAY_LVDS_BT070L1060CS0I1ADA */
+#endif	/* DISPLAY_LVDS_BT070L1060CS0I1ADA || DISPLAY_LVDS_EE1010B1T1CP */
 };
 #endif /* CONFIG_ARMSTONEMX8MP_I2C_B */
 
