--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -39,7 +39,8 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mp.dtb \
 			  picocoremx8mp-adp-aud1.dtb \
 			  picocoremx8mp-basler-isp.dtb \
 			  picocoremx8mpr2-basler-isp.dtb \
-			  picocoremx8mp-BT070L1060CS0I1AD-A.dtb
+			  picocoremx8mp-BT070L1060CS0I1AD-A.dtb \
+			  picocoremx8mp-EE1010B1T-1CP.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mmr2-lpddr4.dtb \
 			  picocoremx8mmr2-lpddr4-lcdif-tc358764-g070y2-l01.dtb \
 			  picocoremx8mmr2-lpddr4-lcdif-tc358775-j070wvtc0211.dtb \
@@ -53,9 +54,10 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mpr2.dtb \
 			  picocoremx8mpr2-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
 			  picocoremx8mpr2-lcdif-g133han01.dtb \
 			  picocoremx8mpr2-adp-aud1.dtb \
-			  picocoremx8mpr2-BT070L1060CS0I1AD-A.dtb
+			  picocoremx8mpr2-BT070L1060CS0I1AD-A.dtb \
+			  picocoremx8mpr2-EE1010B1T-1CP.dtb
 dtb-$(CONFIG_ARCH_MXC) += efusmx8mp.dtb
 dtb-$(CONFIG_ARCH_MXC) += fssmmx8mp.dtb \
 			  fssmmx8mp-lcdif-j070wvtc0211.dtb \
 			  fssmmx8mp-BT070L1060CS0I1AD-A.dtb \
-			  fssmmx8mp-adp-lvds2lvds2-EE1010B1T-1CP.dtb
+			  fssmmx8mp-EE1010B1T-1CP.dtb
