Add display specific DTS for efus/armstonemx8mp
We need display specific device trees for armstonemx8mp and efusmx8mp,
but want to keep our config define syntax.

Add device trees, which set the necessary defines and make it possible
to override the panel defines in the main device tree.

Set HDMI as default display in the main device tree

Improve armstone DTS to only enable display-nodes, if needed

--- a/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
+++ b/arch/arm64/boot/dts/F+S/armstonemx8mp.dtsi
@@ -1254,6 +1254,7 @@ touch: goodix@5d {
 	status = "okay";
 };
 
+#ifdef CONFIG_ARMSTONEMX8MP_HDMI
 &irqsteer_hdmi {
 	status = "okay";
 };
@@ -1275,20 +1276,17 @@ touch: goodix@5d {
 	status = "okay";
 };
 
-
-&lcdif1 {
-	status = "disabled";
-};
-
-&lcdif2 {
-	status = "okay";
-};
-
 &lcdif3 {
 	status = "okay";
 	thres-low  = <1 2>;             /* (FIFO * 1 / 2) */
 	thres-high = <3 4>;             /* (FIFO * 3 / 4) */
 
+};
+#endif
+
+#if defined(CONFIG_ARMSTONEMX8MP_LVDS0) || defined(CONFIG_ARMSTONEMX8MP_LVDS1)
+&lcdif2 {
+	status = "okay";
 };
 
 &ldb {
@@ -1334,6 +1332,12 @@ touch: goodix@5d {
 
 &ldb_phy {
 	status = "okay";
+};
+#endif
+/* defined(CONFIG_ARMSTONEMX8MP_LVDS0) || defined(CONFIG_ARMSTONEMX8MP_LVDS1) */
+
+&lcdif1 {
+	status = "disabled";
 };
 
 &mipi_dsi {
