--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0
 
-dtb-$(CONFIG_ARCH_MXC) += armstonemx8mp.dtb
+dtb-$(CONFIG_ARCH_MXC) += armstonemx8mp.dtb \
+			  armstonemx8mp-BT070L1060CS0I1AD-A.dtb \
+			  armstonemx8mp-EE1010B1T-1CP.dtb
 dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm-lpddr4.dtb \
 			  picocoremx8mm-lpddr4-lcdif-tc358764-g070y2-l01.dtb \
 			  picocoremx8mm-lpddr4-lcdif-tc358775-j070wvtc0211.dtb \
@@ -56,7 +58,9 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mpr2.dtb \
 			  picocoremx8mpr2-adp-aud1.dtb \
 			  picocoremx8mpr2-BT070L1060CS0I1AD-A.dtb \
 			  picocoremx8mpr2-EE1010B1T-1CP.dtb
-dtb-$(CONFIG_ARCH_MXC) += efusmx8mp.dtb
+dtb-$(CONFIG_ARCH_MXC) += efusmx8mp.dtb \
+			  efusmx8mp-BT070L1060CS0I1AD-A.dtb \
+			  efusmx8mp-EE1010B1T-1CP.dtb
 dtb-$(CONFIG_ARCH_MXC) += fssmmx8mp.dtb \
 			  fssmmx8mp-lcdif-j070wvtc0211.dtb \
 			  fssmmx8mp-BT070L1060CS0I1AD-A.dtb \
